fix align in IE7

--- a/client/views/component/header/header.less
+++ b/client/views/component/header/header.less
@@ -7,7 +7,7 @@
   .layout{
     width: 80%;
     height: 60px;
-    display: inline-table;
+    // display: inline-table;
     margin: auto;
     border-bottom: 1px solid @silver3;
     @import 'menu/menu.less';
